Update path configuration

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <nav>
             <ul>
                 <li><a href="">Home</a></li>
-                <li><a href="chat.html">Chat</a></li>
-                <li><a href="prices.html">Prices</a></li>
+                <li><a href="chat/">Chat</a></li>
+                <li><a href="pprices/">Prices</a></li>
             </ul>
         </nav>
         <div class="auth-buttons">
@@ -50,18 +50,18 @@
             <div class="footer-column">
                 <h3>Community</h3>
                 <ul>
-                    <li><a href="forums.html">Forums</a></li>
+                    <li><a href="#">Forums</a></li>
                     <li><a href="#">Discord Server (Under construction)</a></li>
-                    <li><a href="events.html">Events</a></li>
+                    <li><a href="events/">Events</a></li>
                 </ul>
             </div>
             <div class="footer-column">
                 <h3>Support</h3>
                 <ul>
-                    <li><a href="contact.html">Contact Us</a></li>
-                    <li><a href="faq.html">FAQ</a></li>
-                    <li><a href="privacypolicy.html">Privacy Policy</a></li>
-                    <li><a href="tos.html">Terms of Service</a></li>
+                    <li><a href="contact/">Contact Us</a></li>
+                    <li><a href="faq/">FAQ</a></li>
+                    <li><a href="privacy-policy/">Privacy Policy</a></li>
+                    <li><a href="terms-of-service/">Terms of Service</a></li>
                 </ul>
             </div>
             <div class="footer-column">
@@ -78,7 +78,7 @@
         </div>
     </footer>
 
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
 
