--- a/videos/index.html
+++ b/videos/index.html
@@ -6,8 +6,8 @@
     <title>Lukew96 - Videos</title>
     <link rel="icon" href="https://raw.githubusercontent.com/Lukew296/Lukew296.github.io/refs/heads/main/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="video-style.css">
-    <link rel="stylesheer" href="style.css">
+    <link rel="stylesheet" href="css/video-style.css">
+    <link rel="stylesheer" href="css/style.css">
 </head>
 <body>
     <!-- Header -->
@@ -39,7 +39,7 @@
         </div>
         <div class="video-grid">
             <div class="video-card">
-                <iframe src="https://www.youtube.com/embed/video_id_1" frameborder="0" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com" frameborder="0" allowfullscreen></iframe>
                 <h3>Video Title 1</h3>
             </div>
             <div class="video-card">
