Update path configuration

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <nav>
             <ul>
                 <li><a href="">Home</a></li>
-                <li><a href="chat/">Chat</a></li>
-                <li><a href="pprices/">Prices</a></li>
+                <li><a href="/chat/">Chat</a></li>
+                <li><a href="/prices/">Prices</a></li>
             </ul>
         </nav>
         <div class="auth-buttons">
