--- a/contact/index.html
+++ b/contact/index.html
@@ -487,9 +487,8 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="events.html">Events</a></li>
-            <li><a href="faq.html">FAQ</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="/chat/">Chat</a></li>
+            <li><a href="/prices/">Prices</a></li>
         </ul>
     </nav>
     <div class="auth-buttons">
@@ -543,29 +542,28 @@
         <div class="footer-column">
             <h3>BloodVine</h3>
             <ul>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="careers.html">Careers</a></li>
+                <li><a href="/about-us/">About Us</a></li>
+                <li><a href="/careers/">Careers</a></li>
                 <li><a href="press.html">Press</a></li>
             </ul>
         </div>
         <div class="footer-column">
             <h3>Help</h3>
             <ul>
-                <li><a href="faq.html">FAQ</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="support.html">Support</a></li>
+                <li><a href="/faq/">FAQ</a></li>
+                <li><a href="/contact/">Contact</a></li>
             </ul>
         </div>
         <div class="footer-column">
             <h3>Legal</h3>
             <ul>
-                <li><a href="tos.html">Terms of Service</a></li>
-                <li><a href="privacypolicy.html">Privacy Policy</a></li>
+                <li><a href="/terms-of-service/">Terms of Service</a></li>
+                <li><a href="/privacy-policy/">Privacy Policy</a></li>
             </ul>
         </div>
     </div>
     <div class="copyright">
-        &copy; 2024 BloodVine. All rights reserved.
+        &copy; 2025 BloodVine. All rights reserved.
     </div>
 </footer>
 </body>
