--- a/images/index.html
+++ b/images/index.html
@@ -51,6 +51,22 @@
     </style>
 </head>
 <body>
+    <header>
+        <div class="logo">Blood<span>Vine</span></div>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="/chat/">Chat</a></li>
+            </ul>
+        </nav>
+        <div class="auth-buttons">
+            <button class="auth-btn">Login</button>
+            <button class="auth-btn">Sign Up</button>
+        </div>
+        <div class="mobile-menu">
+            <i class="fas fa-bars"></i>
+        </div>
+    </header>
     <div class="container">
         <h1>Image Gallery</h1>
         <div class="image-grid">
