--- a/terms-of-service/index.html
+++ b/terms-of-service/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Terms of Service - BloodVine</title>
-<link rel="stylesheet" href="style.css" />
+<link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
 <div class="page-container">
@@ -23,7 +23,7 @@
 <footer>
 &copy; 2024 BloodVine. All rights reserved.
 <br>
-<a href="index.html">Home</a> | <a href="privacypolicy.html">Privacy Policy</a> | <a href="faq.html">FAQ</a> | <a href="contact.html">Contact Us</a> | <a href="events.html">Events</a>
+<a href="index.html">Home</a> | <a href="/privacy-policy/">Privacy Policy</a> | <a href="/faq/">FAQ</a> | <a href="/contact/">Contact Us</a> | <a href="/events/">Events</a>
 </footer>
 </body>
 </html>
