--- a/videos/index.html
+++ b/videos/index.html
@@ -16,11 +16,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Anime</a></li>
-                <li><a href="#">Manga</a></li>
-                <li><a href="#">Characters</a></li>
-                <li><a href="#">News</a></li>
-                <li><a href="#">Community</a></li>
+                <li><a href="/chat/">Chat</a></li>
+                <li><a href="/prices/">Prices</a></li>
             </ul>
         </nav>
         <div class="auth-buttons">
@@ -71,20 +68,18 @@
             <div class="footer-column">
                 <h3>Community</h3>
                 <ul>
-                    <li><a href="#">Forums</a></li>
-                    <li><a href="#">Discord Server</a></li>
-                    <li><a href="#">Fan Art</a></li>
-                    <li><a href="#">Events</a></li>
+                    <li><a href="#">Forums (Under Construction)</a></li>
+                    <li><a href="#">Discord Server (Under Construction)</a></li>
+                    <li><a href="/events/">Events</a></li>
                 </ul>
             </div>
             <div class="footer-column">
                 <h3>Support</h3>
                 <ul>
-                    <li><a href="#">Help Center</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                    <li><a href="#">FAQ</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Terms of Service</a></li>
+                    <li><a href="/contact/">Contact Us</a></li>
+                    <li><a href="/faq/">FAQ</a></li>
+                    <li><a href="/privacy-policy/">Privacy Policy</a></li>
+                    <li><a href="/terms-of-service/">Terms of Service</a></li>
                 </ul>
             </div>
             <div class="footer-column">
