--- a/chat/index.html
+++ b/chat/index.html
@@ -6,7 +6,7 @@
     <title>BloodVine - Chat</title>
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <style>
         /* Updated Header Styles - Static (not fixed) */
         header {
@@ -348,8 +348,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="chat.html">Chat</a></li>
-                <li><a href="prices.html">Prices</a></li>
+                <li><a href="/prices/">Prices</a></li>
             </ul>
         </nav>
         <div class="auth-buttons">
@@ -436,10 +435,10 @@
             <div class="footer-column">
                 <h3>Support</h3>
                 <ul>
-                    <li><a href="contact.html">Contact Us</a></li>
-                    <li><a href="faq.html">FAQ</a></li>
-                    <li><a href="privacypolicy.html">Privacy Policy</a></li>
-                    <li><a href="tos.html">Terms of Service</a></li>
+                    <li><a href="/contact/">Contact Us</a></li>
+                    <li><a href="/faq/">FAQ</a></li>
+                    <li><a href="/privacy-policy/">Privacy Policy</a></li>
+                    <li><a href="/terms-of-service/">Terms of Service</a></li>
                 </ul>
             </div>
             <div class="footer-column">
@@ -486,7 +485,7 @@
             'lukew296@proton.me'
         ];
         const ADMIN_UIDS = [
-            'CanonSsundee96'
+            'CanonLight#4057'
         ];
 
         // Listen for when Firebase messages are cleared
