--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard - BloodVine</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         .dashboard-container {
@@ -63,8 +63,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="chat.html">Chat</a></li>
-                <li><a href="dashboard.html">Dashboard</a></li>
+                <li><a href="/chat/">Chat</a></li>
+                <li><a href="/prices/">Prices</a></li>
             </ul>
         </nav>
         <div class="auth-buttons">
