--- a/events/index.html
+++ b/events/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Events - BloodVine</title>
-<link rel="stylesheet" href="style.css" />
+<link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
 <div class="page-container">
@@ -21,9 +21,8 @@
 </ul>
 </div>
 <footer>
-&copy; 2024 BloodVine. All rights reserved.
+&copy; 2025 BloodVine. All rights reserved.
 <br>
-<a href="index.html">Home</a> | <a href="tos.html">Terms of Service</a> | <a href="privacypolicy.html">Privacy Policy</a> | <a href="faq.html">FAQ</a> | <a href="contact.html">Contact Us</a>
-</footer>
+<a href="index.html">Home</a> | <a href="/terms-of-service/">Terms of Service</a> | <a href="/privacy-policy/">Privacy Policy</a> | <a href="/contact/">Contact Us</a> | <a href="/events/">Events</a>
 </body>
 </html>
