--- a/faq/index.html
+++ b/faq/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>FAQ - BloodVine</title>
-<link rel="stylesheet" href="style.css" />
+<link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
 <div class="page-container">
@@ -20,7 +20,7 @@
 <footer>
 &copy; 2024 BloodVine. All rights reserved.
 <br>
-<a href="index.html">Home</a> | <a href="tos.html">Terms of Service</a> | <a href="privacypolicy.html">Privacy Policy</a> | <a href="contact.html">Contact Us</a> | <a href="events.html">Events</a>
+<a href="index.html">Home</a> | <a href="/terms-of-service/">Terms of Service</a> | <a href="/privacy-policy/">Privacy Policy</a> | <a href="/contact/">Contact Us</a> | <a href="/events/">Events</a>
 </footer>
 </body>
 </html>
