--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@
                 <ul>
                     <li><a href="#">Forums</a></li>
                     <li><a href="#">Discord Server (Under construction)</a></li>
-                    <li><a href="events/">Events</a></li>
+                    <li><a href="/events/">Events</a></li>
                 </ul>
             </div>
             <div class="footer-column">
                 <h3>Support</h3>
                 <ul>
-                    <li><a href="contact/">Contact Us</a></li>
-                    <li><a href="faq/">FAQ</a></li>
-                    <li><a href="privacy-policy/">Privacy Policy</a></li>
-                    <li><a href="terms-of-service/">Terms of Service</a></li>
+                    <li><a href="/contact/">Contact Us</a></li>
+                    <li><a href="/faq/">FAQ</a></li>
+                    <li><a href="/privacy-policy/">Privacy Policy</a></li>
+                    <li><a href="/terms-of-service/">Terms of Service</a></li>
                 </ul>
             </div>
             <div class="footer-column">
