--- a/chat/index.html
+++ b/chat/index.html
@@ -6,7 +6,7 @@
     <title>BloodVine - Chat</title>
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <style>
         /* Updated Header Styles - Static (not fixed) */
         header {
