--- a/contact/index.html
+++ b/contact/index.html
@@ -543,8 +543,8 @@
             <h3>BloodVine</h3>
             <ul>
                 <li><a href="/about-us/">About Us</a></li>
-                <li><a href="/careers/">Careers</a></li>
-                <li><a href="press.html">Press</a></li>
+                <li><a href="#">Careers</a></li>
+                <li><a href="#">Press</a></li>
             </ul>
         </div>
         <div class="footer-column">
