--- a/videos/index.html
+++ b/videos/index.html
@@ -6,8 +6,8 @@
     <title>Lukew96 - Videos</title>
     <link rel="icon" href="https://raw.githubusercontent.com/Lukew296/Lukew296.github.io/refs/heads/main/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="css/video-style.css">
-    <link rel="stylesheer" href="css/style.css">
+    <link rel="stylesheet" href="/css/video-style.css">
+    <link rel="stylesheer" href="/css/style.css">
 </head>
 <body>
     <!-- Header -->
@@ -96,6 +96,6 @@
         </div>
     </footer>
 
-    <script src="video-main.js"></script>
+    <script src="/js/video-main.js"></script>
 </body>
 </html>
