--- a/events/index.html
+++ b/events/index.html
@@ -5,6 +5,20 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Events - BloodVine</title>
 <link rel="stylesheet" href="/css/style.css" />
+<!-- Ensure footer stays at bottom -->
+<style>
+    html, body { height: 100%; }
+    body {
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+        margin: 0;
+    }
+    /* The main content area grows to fill available space */
+    main#content { flex: 1 0 auto; }
+    /* Footer should not shrink */
+    footer { flex-shrink: 0; }
+</style>
 </head>
 <body>
 <div class="page-container">
@@ -24,5 +38,6 @@
 &copy; 2025 BloodVine. All rights reserved.
 <br>
 <a href="index.html">Home</a> | <a href="/terms-of-service/">Terms of Service</a> | <a href="/privacy-policy/">Privacy Policy</a> | <a href="/contact/">Contact Us</a> | <a href="/events/">Events</a>
+</footer>
 </body>
 </html>
