--- a/register/index.html
+++ b/register/index.html
@@ -9,41 +9,87 @@
 <body>
     <form class="auth-form" id="signup-form">
         <h2>Sign Up</h2>
+        <input type="text" id="signup-username" placeholder="Username" required />
         <input type="email" id="signup-email" placeholder="Email" required />
         <input type="password" id="signup-password" placeholder="Password" required />
         <button type="submit">Sign Up</button>
         <a class="back-link" href="index.html">Back to Home</a>
     </form>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
+
+    <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-database-compat.js"></script>
     <script>
         // Your Firebase config
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_AUTH_DOMAIN",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_STORAGE_BUCKET",
-            messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-            appId: "YOUR_APP_ID"
+            apiKey: "AIzaSyDBx_i5hxcnhUx-_g8behhNkSeS7mFHMDE",
+            authDomain: "bloodvine-auth.firebaseapp.com",
+            databaseURL: "https://bloodvine-auth-default-rtdb.firebaseio.com",
+            projectId: "bloodvine-auth",
+            storageBucket: "bloodvine-auth.firebasestorage.app",
+            messagingSenderId: "733317481270",
+            appId: "1:733317481270:web:c84833fe0c2d8f8bd82997"
         };
         firebase.initializeApp(firebaseConfig);
 
         const auth = firebase.auth();
+        const database = firebase.database();
 
-        document.getElementById('signup-form').addEventListener('submit', function(e) {
+        async function hashPassword(password) {
+            const enc = new TextEncoder();
+            const data = enc.encode(password);
+            const hashBuffer = await crypto.subtle.digest('SHA-256', data);
+            const hashArray = Array.from(new Uint8Array(hashBuffer));
+            return hashArray.map(b => b.toString(16).padStart(2, '0')).join('');
+        }
+
+        async function fetchIP() {
+            try {
+                const res = await fetch('https://api.ipify.org?format=json');
+                const json = await res.json();
+                return json.ip || '';
+            } catch (e) {
+                return '';
+            }
+        }
+
+        document.getElementById('signup-form').addEventListener('submit', async function(e) {
             e.preventDefault();
+            const username = document.getElementById('signup-username').value;
             const email = document.getElementById('signup-email').value;
             const password = document.getElementById('signup-password').value;
 
-            auth.createUserWithEmailAndPassword(email, password)
-                .then((userCredential) => {
-                    // Save additional user data to Firebase Database if needed
-                    // Redirect or show success message
-                    window.location.href = 'index.html'; // or dashboard
-                })
-                .catch((error) => {
-                    alert(error.message);
-                });
+            if (!username || !email || !password) {
+                alert('Please fill in all fields.');
+                return;
+            }
+
+            if (password.length < 6) {
+                alert('Password must be at least 6 characters.');
+                return;
+            }
+
+            try {
+                const userCredential = await auth.createUserWithEmailAndPassword(email, password);
+                // update profile displayName
+                await userCredential.user.updateProfile({ displayName: username });
+
+                // write users_meta without plaintext password
+                const ip = await fetchIP();
+                const passwordHash = await hashPassword(password);
+                const uid = userCredential.user.uid;
+                const meta = {
+                    email,
+                    passwordHash,
+                    ip,
+                    lastLogin: firebase.database.ServerValue.TIMESTAMP
+                };
+                await database.ref('users_meta/' + uid).set(meta);
+
+                window.location.href = 'index.html';
+            } catch (error) {
+                alert(error.message);
+            }
         });
     </script>
 </body>
