--- a/videos/index.html
+++ b/videos/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lukew96 - Videos</title>
-    <link rel="icon" href="https://raw.githubusercontent.com/Lukew296/Lukew296.github.io/refs/heads/main/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon">    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="/css/video-style.css">
     <link rel="stylesheer" href="/css/style.css">
 </head>
